feat: Pulse component

--- a/apps/docs/src/content/once-ui/components/inlineCode.mdx
+++ b/apps/docs/src/content/once-ui/components/inlineCode.mdx
@@ -8,7 +8,7 @@ navLabel: "InlineCode"
 navIcon: "components"
 ---
 
-The InlineCode component is used to display code snippets inline with text. It provides consistent styling with a monospace font and a subtle background to make code stand out from regular text.
+The `InlineCode` component is used to display code snippets inline with text. It provides consistent styling with a monospace font and a subtle background to make code stand out from regular text.
 
 <CodeBlock
   marginTop="16"
