fix: labels in Pulse CodeBlocks

--- a/apps/docs/src/content/once-ui/components/pulse.mdx
+++ b/apps/docs/src/content/once-ui/components/pulse.mdx
@@ -63,7 +63,7 @@ Set the color of the pulse using the `variant` prop.
 <Pulse variant="danger"/>
 <Pulse variant="success"/>`,
       language: "tsx",
-      label: "Pulse"
+      label: "Color"
     }
   ]}
 />
@@ -89,7 +89,7 @@ Set the size of the pulse using the `size` prop.
 <Pulse size="m"/>
 <Pulse size="l"/>`,
       language: "tsx",
-      label: "Pulse"
+      label: "Size"
     }
   ]}
 />
