--- a/apps/docs/src/content/once-ui/components/hover.mdx
+++ b/apps/docs/src/content/once-ui/components/hover.mdx
@@ -6,6 +6,8 @@ docs: "once-ui/components/hover.mdx"
 github: "components/Hover.tsx"
 navLabel: "Hover"
 navIcon: "components"
+navTag: "New"
+navTagVariant: "cyan"
 ---
 
 The `Hover` component wraps any element and displays an overlay on top when the user hovers over it or focuses on it. It's perfect for creating interactive cards with hover effects, image overlays, or any content that needs to reveal additional information on interaction.
